--- a/a01139500_m2_retro_framework.ipynb
+++ b/a01139500_m2_retro_framework.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOD56YYRgtfEYcrw2RTi+wH",
+      "authorship_tag": "ABX9TyPjiZGoeKnYY+q2OHipCTGV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4495,17 +4495,19 @@
         "  for jj in range(0,6,1):\n",
         "    sum_correcto_test.append(np.trace(np.array(almacenamiento_conf_mat_test)[ii,jj]))\n",
         "\n",
+        "np.array(sum_correcto_test).transpose()\n",
+        "np.array(sum_correcto_test).transpose()\n",
         "np.array(sum_correcto_test).transpose()"
       ],
       "metadata": {
         "id": "Sikx7NWqyKcQ",
-        "outputId": "f2b1e384-18ad-43ae-bc6d-58867f56db13",
+        "outputId": "4e19476b-389b-4476-9e8b-8d342683f77d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "collapsed": true
       },
-      "execution_count": 43,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4517,7 +4519,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 50
         }
       ]
     },
