--- a/a01139500_m2_retro_framework.ipynb
+++ b/a01139500_m2_retro_framework.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPjiZGoeKnYY+q2OHipCTGV",
+      "authorship_tag": "ABX9TyNkV2b5v0JHPzkJcBM/nhEA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "hc_dR0BpyPmI",
         "outputId": "8f664d9b-8408-45fc-b531-fcbadbca926a",
@@ -110,7 +110,7 @@
       "metadata": {
         "id": "ivyklirHU1aZ"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -139,7 +139,7 @@
         },
         "collapsed": true
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -209,7 +209,7 @@
       "metadata": {
         "id": "Vvos_FJqVlc6"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -244,7 +244,7 @@
         },
         "outputId": "881971f0-bf75-4586-ae28-21623bd29307"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -682,7 +682,7 @@
         },
         "collapsed": true
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3499,7 +3499,7 @@
         },
         "collapsed": true
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3601,7 +3601,7 @@
         "outputId": "2f7bf43a-e9d4-46d5-c450-73f5cc4f74b4",
         "collapsed": true
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4143,7 +4143,14 @@
       "source": [
         "#print(nnRE)\n",
         "#print(nnRE.coefs_)\n",
-        "scores_valid"
+        "print(np.array(scores_train).transpose())\n",
+        "print(np.array(scores_valid).transpose())\n",
+        "print(np.array(scores_test).transpose())\n",
+        "\n",
+        "print(\"----------------\")\n",
+        "print(np.array(scores_train).transpose().mean(axis=0))\n",
+        "print(np.array(scores_valid).transpose().mean(axis=0))\n",
+        "print(np.array(scores_test).transpose().mean(axis=0))"
       ],
       "metadata": {
         "id": "Y6CtKqMo7p_m",
@@ -4151,19 +4158,40 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4aa0d757-f485-4f5e-bd01-9f630d02933b"
+        "outputId": "1106b63f-0a83-478a-cef2-bf283c7602df"
       },
-      "execution_count": 12,
+      "execution_count": 66,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 12
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0.37593985 0.9924812  0.37593985 0.37593985 0.9924812  0.9924812 ]\n",
+            " [0.37593985 0.37593985 0.9924812  0.9924812  0.9924812  0.9924812 ]\n",
+            " [0.9924812  0.9924812  0.9924812  0.9924812  0.9924812  0.9924812 ]\n",
+            " [0.37593985 0.9924812  0.9924812  0.9924812  0.37593985 0.9924812 ]\n",
+            " [0.37593985 0.37593985 0.9924812  0.9924812  1.         0.9924812 ]\n",
+            " [0.37593985 0.9924812  0.37593985 0.9924812  0.37593985 0.9924812 ]\n",
+            " [0.37593985 0.37593985 0.9924812  0.9924812  0.9924812  0.9924812 ]]\n",
+            "[[0.42424242 0.90909091 0.42424242 0.42424242 0.90909091 0.93939394]\n",
+            " [0.42424242 0.42424242 0.90909091 0.90909091 0.93939394 0.90909091]\n",
+            " [0.93939394 0.90909091 0.90909091 0.90909091 0.93939394 0.93939394]\n",
+            " [0.42424242 0.90909091 0.90909091 0.93939394 0.42424242 0.93939394]\n",
+            " [0.42424242 0.42424242 0.90909091 0.93939394 0.93939394 0.93939394]\n",
+            " [0.42424242 0.93939394 0.42424242 0.93939394 0.42424242 0.93939394]\n",
+            " [0.42424242 0.42424242 0.93939394 0.93939394 0.93939394 0.90909091]]\n",
+            "[[0.58333333 1.         0.58333333 0.58333333 1.         1.        ]\n",
+            " [0.58333333 0.58333333 1.         1.         1.         1.        ]\n",
+            " [1.         1.         1.         1.         1.         1.        ]\n",
+            " [0.58333333 1.         1.         1.         0.58333333 1.        ]\n",
+            " [0.58333333 0.58333333 1.         1.         1.         1.        ]\n",
+            " [0.58333333 0.91666667 0.58333333 1.         0.58333333 1.        ]\n",
+            " [0.58333333 0.58333333 1.         1.         1.         1.        ]]\n",
+            "----------------\n",
+            "[0.46401719 0.72824919 0.81632653 0.90440387 0.81740064 0.9924812 ]\n",
+            "[0.4978355  0.70562771 0.77489177 0.85714286 0.78787879 0.93073593]\n",
+            "[0.64285714 0.80952381 0.88095238 0.94047619 0.88095238 1.        ]\n"
+          ]
         }
       ]
     },
@@ -4229,7 +4257,7 @@
           "height": 854
         }
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4495,31 +4523,31 @@
         "  for jj in range(0,6,1):\n",
         "    sum_correcto_test.append(np.trace(np.array(almacenamiento_conf_mat_test)[ii,jj]))\n",
         "\n",
-        "np.array(sum_correcto_test).transpose()\n",
-        "np.array(sum_correcto_test).transpose()\n",
-        "np.array(sum_correcto_test).transpose()"
+        "print(np.array(sum_correcto_train).transpose())\n",
+        "print(np.array(sum_correcto_valid).transpose())\n",
+        "print(np.array(sum_correcto_test).transpose())"
       ],
       "metadata": {
         "id": "Sikx7NWqyKcQ",
-        "outputId": "4e19476b-389b-4476-9e8b-8d342683f77d",
+        "outputId": "33d6ff59-00c0-4ace-b77e-563134c050f4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "collapsed": true
       },
-      "execution_count": 50,
+      "execution_count": 53,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([ 8,  7,  8,  9, 10,  7, 10,  8,  8, 10,  8,  8, 10, 10, 10, 10, 10,\n",
-              "        8,  8, 10, 10, 10,  9,  9, 10, 10, 10, 10,  9,  9, 10, 10, 10,  9,\n",
-              "        9,  9])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 50
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[111  91  75  81  82  74  93 122  83  84  97  98 106 113 112 107 128  98\n",
+            " 118 121  97 113 128 121 122 121 130 128 119 129 130 129 128 128 120 114]\n",
+            "[19 17 19 16 15 17 29 26 23 25 25 28 27 25 29 24 23 30 28 28 26 28 29 29\n",
+            " 29 30 30 30 29 31 29 29 30 30 31 28]\n",
+            "[ 8  7  8  9 10  7 10  8  8 10  8  8 10 10 10 10 10  8  8 10 10 10  9  9\n",
+            " 10 10 10 10  9  9 10 10 10  9  9  9]\n"
+          ]
         }
       ]
     },
@@ -4571,7 +4599,7 @@
           "height": 854
         }
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4828,13 +4856,33 @@
         "sum_incorrecto_test = []\n",
         "for ii in range(0,6,1):\n",
         "  for jj in range(0,6,1):\n",
-        "    sum_incorrecto_test.append(np.sum(np.array(almacenamiento_conf_mat_test)[ii,jj])-np.trace(np.array(almacenamiento_conf_mat_test)[ii,jj]))"
+        "    sum_incorrecto_test.append(np.sum(np.array(almacenamiento_conf_mat_test)[ii,jj])-np.trace(np.array(almacenamiento_conf_mat_test)[ii,jj]))\n",
+        "\n",
+        "print(np.array(sum_incorrecto_train).transpose())\n",
+        "print(np.array(sum_incorrecto_valid).transpose())\n",
+        "print(np.array(sum_incorrecto_test).transpose())"
       ],
       "metadata": {
-        "id": "kU0tS5i3zN6G"
+        "id": "kU0tS5i3zN6G",
+        "outputId": "87a441c4-f471-486c-9154-b2a136d371a8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 45,
-      "outputs": []
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[22 42 58 52 51 59 40 11 50 49 36 35 27 20 21 26  5 35 15 12 36 20  5 12\n",
+            " 11 12  3  5 14  4  3  4  5  5 13 19]\n",
+            "[14 16 14 17 18 16  4  7 10  8  8  5  6  8  4  9 10  3  5  5  7  5  4  4\n",
+            "  4  3  3  3  4  2  4  4  3  3  2  5]\n",
+            "[4 5 4 3 2 5 2 4 4 2 4 4 2 2 2 2 2 4 4 2 2 2 3 3 2 2 2 2 3 3 2 2 2 3 3 3]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -4883,7 +4931,7 @@
           "height": 854
         }
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
